--- a/src/components/typograpny/SectionTitle.module.css
+++ b/src/components/typograpny/SectionTitle.module.css
@@ -26,8 +26,8 @@
 }
 
 .sectionSubtitle {
-  font-family: var(--font-body);
-  font-size: var(--font-size-lg);
+  font-family: var(--font-accent);
+  font-size: var(--font-size-med);
   color: var(--gray-light);
   margin: 0;
   max-width: 800px;
