--- a/src/components/VideoGrid/VideoGrid.module.css
+++ b/src/components/VideoGrid/VideoGrid.module.css
@@ -13,7 +13,7 @@
 
 .videoItem {
   display: block;
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: 1px solid var(--border-color);
   background-color: var(--dark-primary);
   text-decoration: none;
   color: var(--light-primary);
@@ -91,7 +91,7 @@
 .horizontalLine {
   height: 1px;
   width: 100%;
-  background-color: rgba(150, 150, 150, 0.3);
+  background-color: var(--border-color);
   margin: 0;
 }
 
