--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -5,8 +5,8 @@
   --dark-hover: #202020;
   --dark-shadow: rgba(0, 0, 0, 0.3);
   --light-primary: #ffffff;
+  --border-color: #444444;
   --gray-primary: #666666;
-  --gray-secondary: #444444;
   --gray-light: #999999;
   --error-color: #ff4136;
   --delete-button-color: #ff4136;
