--- a/src/components/AdminPhotoForm/AdminPhotoForm.module.css
+++ b/src/components/AdminPhotoForm/AdminPhotoForm.module.css
@@ -7,7 +7,7 @@
   margin: 0 auto;
   padding: 25px;
   background-color: var(--dark-primary);
-  border: 2px solid var(--light-primary);
+  border: 1px solid var(--border-color);
   color: var(--light-primary);
   border-radius: 0; /* Sharp edges */
 }
@@ -42,7 +42,7 @@
 .formGroup textarea,
 .formGroup select {
   padding: 10px;
-  border: 2px solid var(--light-primary); /* Thicker border */
+  border: 1px solid var(--border-color); /* Thicker border */
   border-radius: 0; /* Sharp edges */
   background-color: var(--dark-primary);
   color: var(--light-primary);
@@ -70,7 +70,7 @@
   max-width: 100%;
   max-height: 200px;
   object-fit: contain;
-  border: 2px solid var(--light-primary); /* Thicker border */
+  border: 1px solid var(--border-color); /* Thicker border */
   border-radius: 0; /* Sharp edges */
   margin-top: 5px;
 }
