--- a/src/components/SectionHeader/SectionHeader.module.css
+++ b/src/components/SectionHeader/SectionHeader.module.css
@@ -155,7 +155,7 @@
 .horizontalLine {
   height: 1px;
   width: 100%;
-  background-color: var(--gray-primary);
+  background-color: var(--border-color);
   margin: 0;
 }
 
