--- a/src/components/SectionHeader/SectionHeader.module.css
+++ b/src/components/SectionHeader/SectionHeader.module.css
@@ -74,6 +74,7 @@
   cursor: pointer;
   transition: all var(--transition-normal);
   text-transform: uppercase;
+  width: 160px;
 }
 
 .sortButton:hover {
@@ -111,7 +112,7 @@
   margin-top: var(--spacing-xs);
   background-color: var(--dark-primary);
   border: 2px solid var(--light-primary);
-  min-width: 200px;
+  width: 200px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -203,7 +204,7 @@
     flex: initial; /* Remove the flex: 1 to avoid stretching */
     white-space: nowrap;
     justify-content: center;
-    padding: var(--spacing-md);
+    padding: var(--spacing-sm);
     font-size: var(--font-size-xs);
   }
 
