made the review page less white

--- a/src/components/ListWithPagination/ListWithPagination.module.css
+++ b/src/components/ListWithPagination/ListWithPagination.module.css
@@ -6,7 +6,6 @@
 
 .list {
   width: 100%;
-  border-top: 1px solid rgba(255, 255, 255, 1);
   margin-bottom: var(--spacing-xl);
 }
 
@@ -18,7 +17,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 16px 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 1);
+  border-bottom: 1px solid var(--border-color);
   box-sizing: border-box;
 }
 
