--- a/src/components/ReviewItem/ReviewItem.module.css
+++ b/src/components/ReviewItem/ReviewItem.module.css
@@ -2,7 +2,7 @@
   flex: 0 0 auto;
   width: 200px;
   background-color: var(--dark-primary);
-  border: 2px solid var(--light-primary);
+  border: 1px solid var(--border-color);
   cursor: pointer;
   outline: none;
   display: flex;
@@ -23,7 +23,7 @@
   width: 100%;
   aspect-ratio: 2/3;
   overflow: hidden;
-  border-bottom: 2px solid var(--light-primary);
+  border-bottom: 1px solid var(--border-color);
 }
 
 .reviewImage {
